[package]
name = "ndstrim"
version = "0.2.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Nemris/ndstrim/"
authors = ["Eric Pigat <nemris@protonmail.com>"]
description = "An utility to trim NDS ROMs."

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_arrays = "0.1.0"

[profile.release]
lto = true
strip = true
